tests/paczka1/small_fuzzy/39817644.err
Error in line 3: A1 S526 6,5
Error in line 4: A1 S526 29,2
Error in line 2: xXVLBL4 S280 96,8
Error in line 12: A1 S280 72,6
